--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FOREX SNR | Belajar Forex & Gold</title>
+<title>FOREX-SNR | Belajar Forex & Gold</title>
 
 <style>
 * {
@@ -142,7 +142,7 @@ footer {
 <body>
 
 <header>
-  <div class="logo">FOREX-SNR</div>
+  <div class="logo">RANI</div>
   <nav>
     <a href="#">Home</a>
     <a href="#">Belajar Forex</a>
