Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -144,11 +144,10 @@ footer {
 <header>
   <div class="logo">RANI</div>
   <nav>
-    <a href="#">Home</a>
-    <a href="#">Belajar Forex</a>
-    <a href="#">Belajar Gold</a>
-    <a href="#">Artikel</a>
-    <a href="#">Kontak</a>
+    <a href="#">ayang</a>
+    <a href="#">bawel</a>
+    <a href="#">suka</a>
+    <a href="#">ngambek</a>
   </nav>
 </header>
 
