Update link for 'ayang' to open in a new tab

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@ footer {
 <header>
   <div class="logo">RANI</div>
   <nav>
-    <a href="#">ayang</a>
+    <a href="ayang.html"
+  target="_blank"
+  rel="noopener noreferrer">ayang</a>
     <a href="#">bawel</a>
     <a href="#">suka</a>
     <a href="#">ngambek</a>
