Enhance ayang.html with new content and image
Added content and image for Ayang page.

--- a/ayang.html
+++ b/ayang.html
@@ -35,8 +35,25 @@
       color: #cccccc;
     }
   </style>
-</head>
 <body>
+  <div class="card">
+    <h1>Ayang 💖</h1>
+
+    <!-- INI TEMPAT GAMBAR -->
+    <img src="images/ayang.jpg" alt="Ayang" style="
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 15px;
+    ">
+
+    <p>
+      Ini halaman khusus ayang ✨
+    </p> </div>
+  </body>
+ 
+</head>
+
+  <body>
 
   <div class="card">
     <h1>Ayang ❤️</h1>
